--- a/MoneyTest/MoneyTest.csproj
+++ b/MoneyTest/MoneyTest.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CurrencyInfoTest.cs" />
+    <Compile Include="MoneyClassTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrencyInfoCollectionTest.cs" />
     <Compile Include="PriceTestConstructor.cs" />
